content/terraform-enterprise/1.0.x/docs/enterprise/projects/manage.mdx
---
page_title: Manage projects in Terraform Enterprise
description: |-
  Use projects to organize and group workspaces and create ownership boundaries
  across your infrastructure.
source: terraform-docs-common
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-08-11T21:14:21-07:00
last_modified: 2025-08-11T21:14:21-07:00
# END AUTO GENERATED METADATA
---

# Manage projects

This topic describes how to create and manage projects in HCP Terraform and Terraform Enterprise. A project is a folder containing one or more workspaces.

## Requirements

You must have the following permissions to manage projects:

-   You must be a member of a team with the **Manage all Projects**  permissions enabled to create a project. Refer to [Organization Permissions](/terraform/enterprise/users-teams-organizations/permissions#organization-permissions) for additional information.
-   You must be a member of a team with the **Visible** option enabled under **Visibility** in the organization settings to configure a new team's access to the project. Refer to [Team Visibility](/terraform/enterprise/users-teams-organizations/teams/manage#team-visibility) for additional information.
-   You must be a member of a team with update and delete permissions to be able to update and delete teams respectively.

To delete tags on a project, you must be member of a team with the **Admin** permission group enabled for the project.

To create tags for a project, you must be member of a team with the **Write** permission group enabled for the project.

## View a project

To view your organization's projects:

1.  Sign in to [HCP Terraform](https://app.terraform.io/) or Terraform Enterprise and select  **Projects** from the sidebar.
2.  Search for a project that you want to view. You can use the following methods:
    -   Sort by column header.
    -   Use the search bar to search on the name of a project or a tag.
3.  Click on a project's name to view more details.

## Create a project

1.  Sign in to [HCP Terraform](https://app.terraform.io/) or Terraform Enterprise and select  **Projects** from the sidebar.
2.  Click **+ New project**.
3.  Specify a name for the project. The name must be unique within the organization and can only include letters, numbers, inner spaces, hyphens, and underscores.
4.  Add a description for the project. This field is optional.
5.  Open the **Add key value tags** menu to add tags to your project. Workspaces you create within the project inherit project tags. Refer to [Define project tags](#define-project-tags) for additional information.
6.  Click **+Add tag** and specify a tag key and tag value. If your organization has defined reserved tag keys, they appear in the **Tag key** field as suggestions. Refer to [Create and manage reserved tags](/terraform/enterprise/users-teams-organizations/organizations/manage-reserved-tags) for additional information.
7.  Click **+ Add tag** to attach any additional tags.
8.  Click **Create** to finish creating the project.

HCP Terraform returns a new project page displaying all the project
information.

## Edit a project

1.  Sign in to [HCP Terraform](https://app.terraform.io/) or Terraform Enterprise and select  **Projects** from the sidebar.
2.  Click on a project name of the project you want to edit.
3.  Choose **Settings** from the sidebar.

On this **General settings** page, you can update the project name, project
description, and delete the project. On the **Team access** page, you can modify
team access to the project.

## Automatically destroy inactive workspaces

<!-- BEGIN: TFC:only name:pnp-callout -->

@include 'tfc-package-callouts/ephemeral-workspaces.mdx'

<!-- END: TFC:only name:pnp-callout -->

You can configure HCP Terraform to automatically destroy each workspace's
infrastructure in a project after a period of inactivity. A workspace
is inactive if the workspace's state has not changed within your designated
time period.

If you configure a project to auto-destroy its infrastructure when inactive, 
any run that updates Terraform state further delays the scheduled auto-destroy 
time by the length of your designated timeframe.

<Warning>

The user interface does not prompt you to approve automated destroy plans. We recommend only using this setting for development environments.

</Warning>

To schedule an auto-destroy run after a period of workspace inactivity:

1.  Sign in to [HCP Terraform](https://app.terraform.io/) or Terraform Enterprise and navigate to the project with workspaces you want to destroy.
2.  Choose **Settings** from the sidebar, then **Auto-destroy Workspaces**.
3.  Click **Set up default**.
4.  Select or customize a desired timeframe of inactivity.
5.  Click **Confirm default**.

You can configure an individual workspace's auto-destroy settings to override
this default configuration. Refer to [automatically destroy workspaces](/terraform/enterprise/workspaces/settings/deletion#automatically-destroy) for more information.

## Delete a project

You can only delete projects that do not contain <!-- BEGIN: TFC:only -->stacks or <!-- END: TFC:only -->workspaces.

To delete an empty project:

1.  Sign in to [HCP Terraform](https://app.terraform.io/) or Terraform Enterprise.
2.  Click **Projects**.
3.  Search for a project that you want to review by scrolling down the table or
    searching for a project name in the search bar above the project table.
4.  Choose **Settings** from the sidebar.
5.  Click the **Delete** button. A **Delete project** modal appears.
6.  Click the **Delete** button to confirm the deletion.

HCP Terraform returns to the **Projects** view with the deleted project
removed from the list.

## Define project tags

You can define tags stored as key-value pairs to help you organize your projects and track resource consumption. Workspaces created in the project automatically inherit the tags, but workspace administrators with appropriate permissions can attach new key-value pairs to their workspaces to override inherited tags. Refer to [Create workspace tags](/terraform/enterprise/workspaces/tags) for additional information about using tags in workspaces.

The following rules apply to tag keys and values:

-   Tags must be one or more characters.
-   Tags have a 255 character limit.
-   Tags can include letters, numbers, colons, hyphens, and underscores.
-   Tag values are optional.
-   You can create up to 10 unique tags per workspace and 10 unique tags per project. As a result, each workspace can have up to 20 tags.
-   You cannot use the following strings at the beginning of a tag key:
    -   `hcp`
    -   `hc`
    -   `ibm`

## Change the execution mode

Navigate to the organization settings and choose the execution mode. Enabling the **Remote** execution mode instructs HCP Terraform or Terraform Enterprise to perform Terraform runs on its own disposable virtual machines. This provides a consistent and reliable run environment and enables advanced features such as Sentinel policy enforcement, cost estimation, notifications, and version control integration.

To disable remote execution for a project, enable the **Local** execution. This mode lets you perform Terraform runs locally with the [CLI-driven run workflow](/terraform/enterprise/run/cli).

You can let HCP Terraform or Terrafomr Enterprise to communicate with isolated, private, or on-premises infrastructure, consider using [HCP Terraform agents](/terraform/cloud-docs/agents). By deploying a lightweight agent, you can establish a simple connection between your environment and HCP Terraform or Terraform Enterprise.

Changing your project's execution mode after a run has already been planned causes the run to error when it is applied.

To minimize the number of runs that error when changing your project's execution mode, complete the following steps:

1. Disable [auto-apply](/terraform/enterprise/workspaces/settings#auto-apply) if it is enabled.
1. Complete any runs that are no longer in the [pending stage](/terraform/enterprise/run/states#the-pending-stage).
1. [Lock](/terraform/enterprise/workspaces/settings#locking) your workspace to prevent any new runs.
1. Change the execution mode.
1. Enable [auto-apply](/terraform/enterprise/workspaces/settings#auto-apply), if it was enabled before changing your execution mode.
1. [Unlock](/terraform/enterprise/workspaces/settings#locking) your workspace.

